

#Build beispielprogramm
add_executable(beispielprogramm
  beispielprogramm.cpp)

#Build alt2bis4
add_executable(alt2bis4
  alt2bis4.cpp)

#Build alt5
add_executable(alt5
  alt5.cpp)

#Build alt7bis9
add_executable(alt7bis9
  alt7bis9.cpp
  circle.cpp
  vec2.cpp
  color.cpp
  mat2.cpp)

#Build alt10
add_executable(alt10
  alt10.cpp)

#Build zusatz
add_executable(zusatz
  zusatz.cpp
  circle.cpp
  vec2.cpp
  color.cpp
  mat2.cpp)

#Build TestList
add_executable(TestList
  TestList.cpp)
